parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> MAIN DOSPUNTOS listainstrucciones
Rule 2     listainstrucciones -> listainstrucciones simpleinstrucciones
Rule 3     listainstrucciones -> simpleinstrucciones
Rule 4     simpleinstrucciones -> declaracion
Rule 5     simpleinstrucciones -> asignacion
Rule 6     simpleinstrucciones -> ifcomando
Rule 7     simpleinstrucciones -> exit
Rule 8     simpleinstrucciones -> print
Rule 9     simpleinstrucciones -> etiqueta
Rule 10    simpleinstrucciones -> goto
Rule 11    simpleinstrucciones -> read
Rule 12    simpleinstrucciones -> unset
Rule 13    declaracion -> variable PTCOMA
Rule 14    asignacion -> variable IGUAL tipo PTCOMA
Rule 15    tipo -> instruccionregistro
Rule 16    tipo -> conversion
Rule 17    tipo -> arreglo
Rule 18    variable -> TEMPORALES
Rule 19    variable -> PARAMETROS
Rule 20    variable -> DEVOLUCIONES
Rule 21    variable -> RETORNONIVEL
Rule 22    variable -> PILA
Rule 23    variable -> SP
Rule 24    instruccionregistro -> registro MAS registro
Rule 25    instruccionregistro -> registro MENOS registro
Rule 26    instruccionregistro -> registro POR registro
Rule 27    instruccionregistro -> registro DIVIDIDO registro
Rule 28    instruccionregistro -> registro RESIDUO registro
Rule 29    instruccionregistro -> registro ANDLOGICA registro
Rule 30    instruccionregistro -> registro ORLOGICA registro
Rule 31    instruccionregistro -> registro XOR registro
Rule 32    instruccionregistro -> registro ANDBIT registro
Rule 33    instruccionregistro -> registro ORBIT registro
Rule 34    instruccionregistro -> registro XORBIT registro
Rule 35    instruccionregistro -> registro SHIFTIZQ registro
Rule 36    instruccionregistro -> registro SHIFTDER registro
Rule 37    instruccionregistro -> registro IGUALIGUAL registro
Rule 38    instruccionregistro -> registro NOIGUAL registro
Rule 39    instruccionregistro -> registro MAYORIGUAL registro
Rule 40    instruccionregistro -> registro MENORIGUAL registro
Rule 41    instruccionregistro -> registro MAYOR registro
Rule 42    instruccionregistro -> registro MENOR registro
Rule 43    instruccionregistro -> registro
Rule 44    registro -> ABS PARIZQ registro PARDER
Rule 45    registro -> NOTLOGICA registro
Rule 46    registro -> NOTBIT registro
Rule 47    registro -> MENOS registro
Rule 48    registro -> ANDBIT registro
Rule 49    registro -> ENTERO
Rule 50    registro -> DECIMAL
Rule 51    registro -> CADENA
Rule 52    registro -> acceso
Rule 53    acceso -> variable dimension
Rule 54    acceso -> variable
Rule 55    dimension -> dimension CORCHETEIZQ inside CORCHETEDER
Rule 56    dimension -> CORCHETEIZQ inside CORCHETEDER
Rule 57    inside -> ENTERO
Rule 58    inside -> CADENA
Rule 59    inside -> acceso
Rule 60    conversion -> PARIZQ eltipo PARDER registro
Rule 61    arreglo -> ARRAY PARIZQ PARDER
Rule 62    eltipo -> FLOAT
Rule 63    eltipo -> INT
Rule 64    eltipo -> CHAR
Rule 65    exit -> EXIT PTCOMA
Rule 66    print -> PRINT PARIZQ registro PARDER PTCOMA
Rule 67    etiqueta -> ETIQUETA DOSPUNTOS
Rule 68    goto -> GOTO ETIQUETA PTCOMA
Rule 69    read -> READ PARIZQ PARDER PTCOMA
Rule 70    unset -> UNSET PARIZQ acceso PARDER PTCOMA
Rule 71    ifcomando -> IF PARIZQ instruccionregistro PARDER GOTO ETIQUETA PTCOMA

Terminals, with rules where they appear

ABS                  : 44
ANDBIT               : 32 48
ANDLOGICA            : 29
ARRAY                : 61
CADENA               : 51 58
CHAR                 : 64
CORCHETEDER          : 55 56
CORCHETEIZQ          : 55 56
DECIMAL              : 50
DEVOLUCIONES         : 20
DIVIDIDO             : 27
DOSPUNTOS            : 1 67
ENTERO               : 49 57
ETIQUETA             : 67 68 71
EXIT                 : 65
FLOAT                : 62
GOTO                 : 68 71
IF                   : 71
IGUAL                : 14
IGUALIGUAL           : 37
INT                  : 63
MAIN                 : 1
MAS                  : 24
MAYOR                : 41
MAYORIGUAL           : 39
MENOR                : 42
MENORIGUAL           : 40
MENOS                : 25 47
NOIGUAL              : 38
NOTBIT               : 46
NOTLOGICA            : 45
ORBIT                : 33
ORLOGICA             : 30
PARAMETROS           : 19
PARDER               : 44 60 61 66 69 70 71
PARIZQ               : 44 60 61 66 69 70 71
PILA                 : 22
POR                  : 26
PRINT                : 66
PTCOMA               : 13 14 65 66 68 69 70 71
READ                 : 69
RESIDUO              : 28
RETORNONIVEL         : 21
SHIFTDER             : 36
SHIFTIZQ             : 35
SP                   : 23
TEMPORALES           : 18
UNSET                : 70
XOR                  : 31
XORBIT               : 34
error                : 

Nonterminals, with rules where they appear

acceso               : 52 59 70
arreglo              : 17
asignacion           : 5
conversion           : 16
declaracion          : 4
dimension            : 53 55
eltipo               : 60
etiqueta             : 9
exit                 : 7
goto                 : 10
ifcomando            : 6
init                 : 0
inside               : 55 56
instruccionregistro  : 15 71
listainstrucciones   : 1 2
print                : 8
read                 : 11
registro             : 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 44 45 46 47 48 60 66
simpleinstrucciones  : 2 3
tipo                 : 14
unset                : 12
variable             : 13 14 53 54

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . MAIN DOSPUNTOS listainstrucciones

    MAIN            shift and go to state 2

    init                           shift and go to state 1

state 1

    (0) S' -> init .



state 2

    (1) init -> MAIN . DOSPUNTOS listainstrucciones

    DOSPUNTOS       shift and go to state 3


state 3

    (1) init -> MAIN DOSPUNTOS . listainstrucciones
    (2) listainstrucciones -> . listainstrucciones simpleinstrucciones
    (3) listainstrucciones -> . simpleinstrucciones
    (4) simpleinstrucciones -> . declaracion
    (5) simpleinstrucciones -> . asignacion
    (6) simpleinstrucciones -> . ifcomando
    (7) simpleinstrucciones -> . exit
    (8) simpleinstrucciones -> . print
    (9) simpleinstrucciones -> . etiqueta
    (10) simpleinstrucciones -> . goto
    (11) simpleinstrucciones -> . read
    (12) simpleinstrucciones -> . unset
    (13) declaracion -> . variable PTCOMA
    (14) asignacion -> . variable IGUAL tipo PTCOMA
    (71) ifcomando -> . IF PARIZQ instruccionregistro PARDER GOTO ETIQUETA PTCOMA
    (65) exit -> . EXIT PTCOMA
    (66) print -> . PRINT PARIZQ registro PARDER PTCOMA
    (67) etiqueta -> . ETIQUETA DOSPUNTOS
    (68) goto -> . GOTO ETIQUETA PTCOMA
    (69) read -> . READ PARIZQ PARDER PTCOMA
    (70) unset -> . UNSET PARIZQ acceso PARDER PTCOMA
    (18) variable -> . TEMPORALES
    (19) variable -> . PARAMETROS
    (20) variable -> . DEVOLUCIONES
    (21) variable -> . RETORNONIVEL
    (22) variable -> . PILA
    (23) variable -> . SP

    IF              shift and go to state 16
    EXIT            shift and go to state 19
    PRINT           shift and go to state 20
    ETIQUETA        shift and go to state 18
    GOTO            shift and go to state 17
    READ            shift and go to state 21
    UNSET           shift and go to state 22
    TEMPORALES      shift and go to state 23
    PARAMETROS      shift and go to state 24
    DEVOLUCIONES    shift and go to state 25
    RETORNONIVEL    shift and go to state 26
    PILA            shift and go to state 27
    SP              shift and go to state 28

    listainstrucciones             shift and go to state 4
    simpleinstrucciones            shift and go to state 5
    declaracion                    shift and go to state 6
    asignacion                     shift and go to state 7
    ifcomando                      shift and go to state 8
    exit                           shift and go to state 9
    print                          shift and go to state 10
    etiqueta                       shift and go to state 11
    goto                           shift and go to state 12
    read                           shift and go to state 13
    unset                          shift and go to state 14
    variable                       shift and go to state 15

state 4

    (1) init -> MAIN DOSPUNTOS listainstrucciones .
    (2) listainstrucciones -> listainstrucciones . simpleinstrucciones
    (4) simpleinstrucciones -> . declaracion
    (5) simpleinstrucciones -> . asignacion
    (6) simpleinstrucciones -> . ifcomando
    (7) simpleinstrucciones -> . exit
    (8) simpleinstrucciones -> . print
    (9) simpleinstrucciones -> . etiqueta
    (10) simpleinstrucciones -> . goto
    (11) simpleinstrucciones -> . read
    (12) simpleinstrucciones -> . unset
    (13) declaracion -> . variable PTCOMA
    (14) asignacion -> . variable IGUAL tipo PTCOMA
    (71) ifcomando -> . IF PARIZQ instruccionregistro PARDER GOTO ETIQUETA PTCOMA
    (65) exit -> . EXIT PTCOMA
    (66) print -> . PRINT PARIZQ registro PARDER PTCOMA
    (67) etiqueta -> . ETIQUETA DOSPUNTOS
    (68) goto -> . GOTO ETIQUETA PTCOMA
    (69) read -> . READ PARIZQ PARDER PTCOMA
    (70) unset -> . UNSET PARIZQ acceso PARDER PTCOMA
    (18) variable -> . TEMPORALES
    (19) variable -> . PARAMETROS
    (20) variable -> . DEVOLUCIONES
    (21) variable -> . RETORNONIVEL
    (22) variable -> . PILA
    (23) variable -> . SP

    $end            reduce using rule 1 (init -> MAIN DOSPUNTOS listainstrucciones .)
    IF              shift and go to state 16
    EXIT            shift and go to state 19
    PRINT           shift and go to state 20
    ETIQUETA        shift and go to state 18
    GOTO            shift and go to state 17
    READ            shift and go to state 21
    UNSET           shift and go to state 22
    TEMPORALES      shift and go to state 23
    PARAMETROS      shift and go to state 24
    DEVOLUCIONES    shift and go to state 25
    RETORNONIVEL    shift and go to state 26
    PILA            shift and go to state 27
    SP              shift and go to state 28

    simpleinstrucciones            shift and go to state 29
    declaracion                    shift and go to state 6
    asignacion                     shift and go to state 7
    ifcomando                      shift and go to state 8
    exit                           shift and go to state 9
    print                          shift and go to state 10
    etiqueta                       shift and go to state 11
    goto                           shift and go to state 12
    read                           shift and go to state 13
    unset                          shift and go to state 14
    variable                       shift and go to state 15

state 5

    (3) listainstrucciones -> simpleinstrucciones .

    IF              reduce using rule 3 (listainstrucciones -> simpleinstrucciones .)
    EXIT            reduce using rule 3 (listainstrucciones -> simpleinstrucciones .)
    PRINT           reduce using rule 3 (listainstrucciones -> simpleinstrucciones .)
    ETIQUETA        reduce using rule 3 (listainstrucciones -> simpleinstrucciones .)
    GOTO            reduce using rule 3 (listainstrucciones -> simpleinstrucciones .)
    READ            reduce using rule 3 (listainstrucciones -> simpleinstrucciones .)
    UNSET           reduce using rule 3 (listainstrucciones -> simpleinstrucciones .)
    TEMPORALES      reduce using rule 3 (listainstrucciones -> simpleinstrucciones .)
    PARAMETROS      reduce using rule 3 (listainstrucciones -> simpleinstrucciones .)
    DEVOLUCIONES    reduce using rule 3 (listainstrucciones -> simpleinstrucciones .)
    RETORNONIVEL    reduce using rule 3 (listainstrucciones -> simpleinstrucciones .)
    PILA            reduce using rule 3 (listainstrucciones -> simpleinstrucciones .)
    SP              reduce using rule 3 (listainstrucciones -> simpleinstrucciones .)
    $end            reduce using rule 3 (listainstrucciones -> simpleinstrucciones .)


state 6

    (4) simpleinstrucciones -> declaracion .

    IF              reduce using rule 4 (simpleinstrucciones -> declaracion .)
    EXIT            reduce using rule 4 (simpleinstrucciones -> declaracion .)
    PRINT           reduce using rule 4 (simpleinstrucciones -> declaracion .)
    ETIQUETA        reduce using rule 4 (simpleinstrucciones -> declaracion .)
    GOTO            reduce using rule 4 (simpleinstrucciones -> declaracion .)
    READ            reduce using rule 4 (simpleinstrucciones -> declaracion .)
    UNSET           reduce using rule 4 (simpleinstrucciones -> declaracion .)
    TEMPORALES      reduce using rule 4 (simpleinstrucciones -> declaracion .)
    PARAMETROS      reduce using rule 4 (simpleinstrucciones -> declaracion .)
    DEVOLUCIONES    reduce using rule 4 (simpleinstrucciones -> declaracion .)
    RETORNONIVEL    reduce using rule 4 (simpleinstrucciones -> declaracion .)
    PILA            reduce using rule 4 (simpleinstrucciones -> declaracion .)
    SP              reduce using rule 4 (simpleinstrucciones -> declaracion .)
    $end            reduce using rule 4 (simpleinstrucciones -> declaracion .)


state 7

    (5) simpleinstrucciones -> asignacion .

    IF              reduce using rule 5 (simpleinstrucciones -> asignacion .)
    EXIT            reduce using rule 5 (simpleinstrucciones -> asignacion .)
    PRINT           reduce using rule 5 (simpleinstrucciones -> asignacion .)
    ETIQUETA        reduce using rule 5 (simpleinstrucciones -> asignacion .)
    GOTO            reduce using rule 5 (simpleinstrucciones -> asignacion .)
    READ            reduce using rule 5 (simpleinstrucciones -> asignacion .)
    UNSET           reduce using rule 5 (simpleinstrucciones -> asignacion .)
    TEMPORALES      reduce using rule 5 (simpleinstrucciones -> asignacion .)
    PARAMETROS      reduce using rule 5 (simpleinstrucciones -> asignacion .)
    DEVOLUCIONES    reduce using rule 5 (simpleinstrucciones -> asignacion .)
    RETORNONIVEL    reduce using rule 5 (simpleinstrucciones -> asignacion .)
    PILA            reduce using rule 5 (simpleinstrucciones -> asignacion .)
    SP              reduce using rule 5 (simpleinstrucciones -> asignacion .)
    $end            reduce using rule 5 (simpleinstrucciones -> asignacion .)


state 8

    (6) simpleinstrucciones -> ifcomando .

    IF              reduce using rule 6 (simpleinstrucciones -> ifcomando .)
    EXIT            reduce using rule 6 (simpleinstrucciones -> ifcomando .)
    PRINT           reduce using rule 6 (simpleinstrucciones -> ifcomando .)
    ETIQUETA        reduce using rule 6 (simpleinstrucciones -> ifcomando .)
    GOTO            reduce using rule 6 (simpleinstrucciones -> ifcomando .)
    READ            reduce using rule 6 (simpleinstrucciones -> ifcomando .)
    UNSET           reduce using rule 6 (simpleinstrucciones -> ifcomando .)
    TEMPORALES      reduce using rule 6 (simpleinstrucciones -> ifcomando .)
    PARAMETROS      reduce using rule 6 (simpleinstrucciones -> ifcomando .)
    DEVOLUCIONES    reduce using rule 6 (simpleinstrucciones -> ifcomando .)
    RETORNONIVEL    reduce using rule 6 (simpleinstrucciones -> ifcomando .)
    PILA            reduce using rule 6 (simpleinstrucciones -> ifcomando .)
    SP              reduce using rule 6 (simpleinstrucciones -> ifcomando .)
    $end            reduce using rule 6 (simpleinstrucciones -> ifcomando .)


state 9

    (7) simpleinstrucciones -> exit .

    IF              reduce using rule 7 (simpleinstrucciones -> exit .)
    EXIT            reduce using rule 7 (simpleinstrucciones -> exit .)
    PRINT           reduce using rule 7 (simpleinstrucciones -> exit .)
    ETIQUETA        reduce using rule 7 (simpleinstrucciones -> exit .)
    GOTO            reduce using rule 7 (simpleinstrucciones -> exit .)
    READ            reduce using rule 7 (simpleinstrucciones -> exit .)
    UNSET           reduce using rule 7 (simpleinstrucciones -> exit .)
    TEMPORALES      reduce using rule 7 (simpleinstrucciones -> exit .)
    PARAMETROS      reduce using rule 7 (simpleinstrucciones -> exit .)
    DEVOLUCIONES    reduce using rule 7 (simpleinstrucciones -> exit .)
    RETORNONIVEL    reduce using rule 7 (simpleinstrucciones -> exit .)
    PILA            reduce using rule 7 (simpleinstrucciones -> exit .)
    SP              reduce using rule 7 (simpleinstrucciones -> exit .)
    $end            reduce using rule 7 (simpleinstrucciones -> exit .)


state 10

    (8) simpleinstrucciones -> print .

    IF              reduce using rule 8 (simpleinstrucciones -> print .)
    EXIT            reduce using rule 8 (simpleinstrucciones -> print .)
    PRINT           reduce using rule 8 (simpleinstrucciones -> print .)
    ETIQUETA        reduce using rule 8 (simpleinstrucciones -> print .)
    GOTO            reduce using rule 8 (simpleinstrucciones -> print .)
    READ            reduce using rule 8 (simpleinstrucciones -> print .)
    UNSET           reduce using rule 8 (simpleinstrucciones -> print .)
    TEMPORALES      reduce using rule 8 (simpleinstrucciones -> print .)
    PARAMETROS      reduce using rule 8 (simpleinstrucciones -> print .)
    DEVOLUCIONES    reduce using rule 8 (simpleinstrucciones -> print .)
    RETORNONIVEL    reduce using rule 8 (simpleinstrucciones -> print .)
    PILA            reduce using rule 8 (simpleinstrucciones -> print .)
    SP              reduce using rule 8 (simpleinstrucciones -> print .)
    $end            reduce using rule 8 (simpleinstrucciones -> print .)


state 11

    (9) simpleinstrucciones -> etiqueta .

    IF              reduce using rule 9 (simpleinstrucciones -> etiqueta .)
    EXIT            reduce using rule 9 (simpleinstrucciones -> etiqueta .)
    PRINT           reduce using rule 9 (simpleinstrucciones -> etiqueta .)
    ETIQUETA        reduce using rule 9 (simpleinstrucciones -> etiqueta .)
    GOTO            reduce using rule 9 (simpleinstrucciones -> etiqueta .)
    READ            reduce using rule 9 (simpleinstrucciones -> etiqueta .)
    UNSET           reduce using rule 9 (simpleinstrucciones -> etiqueta .)
    TEMPORALES      reduce using rule 9 (simpleinstrucciones -> etiqueta .)
    PARAMETROS      reduce using rule 9 (simpleinstrucciones -> etiqueta .)
    DEVOLUCIONES    reduce using rule 9 (simpleinstrucciones -> etiqueta .)
    RETORNONIVEL    reduce using rule 9 (simpleinstrucciones -> etiqueta .)
    PILA            reduce using rule 9 (simpleinstrucciones -> etiqueta .)
    SP              reduce using rule 9 (simpleinstrucciones -> etiqueta .)
    $end            reduce using rule 9 (simpleinstrucciones -> etiqueta .)


state 12

    (10) simpleinstrucciones -> goto .
